--- a/ListableUI/Resources/en.lproj/Localizable.strings
+++ b/ListableUI/Resources/en.lproj/Localizable.strings
@@ -1,12 +1,12 @@
-/* Accessibility hint for the reorder control in an item */
-"Double tap and hold, wait for the sound, then drag to rearrange." = "Double tap and hold, wait for the sound, then drag to rearrange.";
-
 /* title for an accessibility action that will move a selected cell down one position in the list. */
-"Move down" = "Move down";
+"reorder.AccessibilityAction.MoveDown" = "Move down";
 
 /* title for an accessibility action that will move a selected cell up one position in the list. */
-"Move up" = "Move up";
+"reorder.AccessibilityAction.MoveUp" = "Move up";
+
+/* Accessibility hint for the reorder control in an item */
+"reorder.AccessibilityHint" = "Double tap and hold, wait for the sound, then drag to rearrange.";
 
 /* Accessibility label for the reorder control on an item */
-"Reorder" = "Reorder";
+"reorder.AccessibilityLabel" = "Reorder";
 
